--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -10,7 +10,7 @@
 <main class="flex-shrink-0">
     <div class="container">
 
-        <h1>Cyrillic test ....... наконец-то пройден, уррра, получилось!</h1>
+        <h1>Cyrillic test </h1>
 
         <h2 class="mt-5">Main page<br>Главная страница</h2>
         <h3 class="mt-3">Here some info about e-shop should be placed, promotions, discounts, news ...<br>
